// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Avatar Basic Usage 1`] = `
Object {
  "docs": "The most basic instance of an Avatar requires a src image and a title to be used for accessibility or as a fallback in case the image can't be loaded.",
  "html": "<span
  class=\\"drac-avatar drac-bg-green-transparent drac-text-green\\"
  style=\\"
    background-image: url(https://pbs.twimg.com/profile_images/1325812776707690496/_iTWBLbr_400x400.jpg);
  \\"
></span>
",
  "react": "<Avatar
  title=\\"Netto Farah\\"
  src=\\"https://pbs.twimg.com/profile_images/1325812776707690496/_iTWBLbr_400x400.jpg\\"
/>;
",
  "title": "Usage",
}
`;

exports[`Site: Avatar Borders 1`] = `
Object {
  "docs": "A border variant allows for customization of the border width of an Avatar, or for an Avatar to be rendered without a border.",
  "html": "<div>
  <span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-lg-stroke\\"
    ><span class=\\"drac-text drac-line-height drac-text-white\\">NF</span></span
  ><span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-no-border\\"
    ><span class=\\"drac-text drac-line-height drac-text-white\\">NF</span></span
  >
</div>
",
  "react": "<div>
  <Avatar title=\\"Netto Farah\\" borderVariant=\\"large\\" />
  <Avatar title=\\"Netto Farah\\" borderVariant=\\"none\\" />
</div>;
",
  "title": "Borders",
}
`;

exports[`Site: Avatar Colors 1`] = `
Object {
  "docs": "The Avatar component accepts a *color* param that allows for customizing the background and accent color for an Avatar.",
  "html": "<span class=\\"drac-avatar drac-bg-cyan-transparent drac-text-cyan\\"
  ><span class=\\"drac-text drac-line-height drac-text-cyan\\">NF</span></span
>
",
  "react": "<Avatar title=\\"Netto Farah\\" color=\\"cyan\\" />;
",
  "title": "Colors",
}
`;

exports[`Site: Avatar Variants 1`] = `
Object {
  "docs": "Avatars accept multiple variants, which can be used to render a more subtle variation of the Avatar component.",
  "html": "<div>
  <span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-subtle\\"
    ><span class=\\"drac-text drac-line-height drac-text-white\\">ZR</span></span
  ><span class=\\"drac-avatar drac-bg-green-transparent drac-text-green\\"
    ><span class=\\"drac-text drac-line-height drac-text-white\\">NF</span></span
  >
</div>
",
  "react": "<div>
  <Avatar title=\\"Zeno Rocha\\" variant=\\"subtle\\" />
  <Avatar title=\\"Netto Farah\\" variant=\\"normal\\" />
</div>;
",
  "title": "Variants",
}
`;
